# TP2-PAA

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: mtree.md
include/: arvore.h  image_vectorization.h  lsh.h  mtree.h  my_header.h
log/: kdtree_log.csv  list_log.csv  lsh_log.csv  mtree_log.csv
src/: arvore.cpp  image_vectorization.cpp  lsh.cpp  main.cpp  main_list.cpp  mtree.cpp  mtree_integration.cpp  my_header.cpp
